[package]
name = "frag-aes"
version = "0.1.0"
edition = "2021"


[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
hkdf = "0.12.4"
rayon = "1.10.0"
ring = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
zeroize = "1.8.1"
[dev-dependencies]
weird-data = "0.2.0"
better-panic = "0.3.0"
